--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
@@ -15,7 +16,11 @@
         android:textSize="60sp"
         android:text="0" />
     <LinearLayout
+        android:id="@+id/firstRowLayout"
+        android:layout_toLeftOf="@id/buttonPlus"
+        android:layout_below="@id/result"
         android:layout_width="match_parent"
+        android:weightSum="3"
         android:gravity="center"
         android:layout_height="wrap_content">
         <Button
@@ -41,6 +46,8 @@
             android:textSize="50sp"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/secondRowLayout"
+        android:layout_below="@id/firstRowLayout"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
@@ -67,6 +74,8 @@
             android:textSize="50sp"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/thirdRowLayout"
+        android:layout_below="@id/secondRowLayout"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
@@ -93,6 +102,8 @@
             android:textSize="50sp"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/fourthRowLayout"
+        android:layout_below="@id/thirdRowLayout"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
@@ -111,4 +122,13 @@
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
     </LinearLayout>
-</LinearLayout>
+    <Button
+        android:id="@+id/buttonPlus"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/result"
+        android:text="@string/button_plus"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"/>
+</RelativeLayout>
