--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#111111"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,33 +15,34 @@
         android:padding="24dp"
         android:gravity="end"
         android:textSize="60sp"
-        android:text="0" />
+        android:textColor="#FFFFFF"
+        android:text="0"
+        android:background="#111111"/>
     <LinearLayout
         android:id="@+id/firstRowLayout"
-        android:layout_toLeftOf="@id/buttonPlus"
         android:layout_below="@id/result"
+        android:layout_toLeftOf="@id/buttonDivision"
         android:layout_width="match_parent"
-        android:weightSum="3"
         android:gravity="center"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/btnOne"
-            android:text="@string/button_one"
+            android:id="@+id/btnClear"
             android:layout_weight="1"
+            android:text="@string/button_clear"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
         <Button
-            android:id="@+id/btnTwo"
+            android:id="@+id/btnPlusMinus"
             android:layout_weight="1"
-            android:text="@string/button_two"
+            android:text="@string/button_plus_minus"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
         <Button
-            android:id="@+id/btnThree"
+            android:id="@+id/btnPercent"
             android:layout_weight="1"
-            android:text="@string/button_three"
+            android:text="@string/button_percent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
@@ -48,6 +50,37 @@
     <LinearLayout
         android:id="@+id/secondRowLayout"
         android:layout_below="@id/firstRowLayout"
+        android:layout_toLeftOf="@id/buttonMultiplication"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btnSeven"
+            android:layout_weight="1"
+            android:text="@string/button_seven"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"/>
+        <Button
+            android:id="@+id/btnEight"
+            android:layout_weight="1"
+            android:text="@string/button_eight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"/>
+        <Button
+            android:id="@+id/btnNine"
+            android:layout_weight="1"
+            android:text="@string/button_nine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/thirdRowLayout"
+        android:layout_below="@id/secondRowLayout"
+        android:layout_toLeftOf="@id/buttonMinus"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
@@ -73,37 +106,40 @@
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
     </LinearLayout>
+     <LinearLayout
+         android:id="@+id/fourthRowLayout"
+         android:layout_toLeftOf="@id/buttonPlus"
+         android:layout_below="@id/thirdRowLayout"
+         android:layout_width="match_parent"
+         android:weightSum="3"
+         android:gravity="center"
+         android:layout_height="wrap_content">
+         <Button
+             android:id="@+id/btnOne"
+             android:text="@string/button_one"
+             android:layout_weight="1"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:textSize="50sp"/>
+         <Button
+             android:id="@+id/btnTwo"
+             android:layout_weight="1"
+             android:text="@string/button_two"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:textSize="50sp"/>
+         <Button
+             android:id="@+id/btnThree"
+             android:layout_weight="1"
+             android:text="@string/button_three"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:textSize="50sp"/>
+     </LinearLayout>
     <LinearLayout
-        android:id="@+id/thirdRowLayout"
-        android:layout_below="@id/secondRowLayout"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/btnSeven"
-            android:layout_weight="1"
-            android:text="@string/button_seven"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="50sp"/>
-        <Button
-            android:id="@+id/btnEight"
-            android:layout_weight="1"
-            android:text="@string/button_eight"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="50sp"/>
-        <Button
-            android:id="@+id/btnNine"
-            android:layout_weight="1"
-            android:text="@string/button_nine"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="50sp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/fourthRowLayout"
-        android:layout_below="@id/thirdRowLayout"
+        android:id="@+id/fifthRowLayout"
+        android:layout_below="@id/fourthRowLayout"
+        android:layout_toLeftOf="@id/buttonSubmit"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
@@ -122,13 +158,66 @@
             android:layout_height="wrap_content"
             android:textSize="50sp"/>
     </LinearLayout>
+
     <Button
-        android:id="@+id/buttonPlus"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/result"
-        android:text="@string/button_plus"
-        android:layout_weight="1"
+        android:id="@+id/buttonDivision"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50sp"/>
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/result"
+        android:layout_weight="1"
+        android:backgroundTint="#FF9800"
+        android:text="@string/button_division"
+        android:textColor="#ECECEC"
+        android:textSize="50sp" />
+
+    <Button
+        android:id="@+id/buttonMultiplication"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/buttonDivision"
+        android:layout_weight="1"
+        android:backgroundTint="#FF9800"
+        android:isScrollContainer="false"
+        android:shadowColor="#FF9800"
+        android:text="@string/button_multiplication"
+        android:textColor="#ECECEC"
+        android:textSize="50sp" />
+
+    <Button
+        android:id="@+id/buttonMinus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/buttonMultiplication"
+        android:layout_weight="1"
+        android:backgroundTint="#FF9800"
+        android:text="@string/button_minus"
+        android:textColor="#ECECEC"
+        android:textSize="50sp" />
+
+    <Button
+        android:id="@+id/buttonPlus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/buttonMinus"
+        android:layout_weight="1"
+        android:backgroundTint="#FF9800"
+        android:text="@string/button_plus"
+        android:textColor="#ECECEC"
+        android:textSize="50sp" />
+
+    <Button
+        android:id="@+id/buttonSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/buttonPlus"
+        android:layout_weight="1"
+        android:backgroundTint="#FF9800"
+        android:text="@string/button_submit"
+        android:textColor="#ECECEC"
+        android:textSize="50sp" />
 </RelativeLayout>
